--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,49 +1,42 @@
-modLoader="javafml" #mandatory
-
-loaderVersion="[39,)" #mandatory
-
+modLoader="javafml"
+loaderVersion="[39,)"
 license="All rights reserved"
 
-[[mods]] #mandatory
-
-modId="xsurvive" #mandatory
-
-version="1.18.1-1.0" #mandatory
-
-displayName="XSurvive" #mandatory
-
-credits="Thanks for downloading my Mod" #optional
-
+[[mods]]
+modId="xsurvive"
+version="1.18.1-1.0"
+displayName="XSurvive"
+credits="Thanks for downloading my Mod"
 authors="Luis" #optional
-
 #displayURL="https://github.com/Luis-st/Forge-XSurvive/issues"
-
 description='''
 
 Have a lot of fun when playing
-XOres Development Team
+XSurvive Development Team
 '''
 
-[[dependencies.xsurvive]] #optional
-
-    modId="forge" #mandatory
-
-    mandatory=true #mandatory
-
-    versionRange="[39,)" #mandatory
-
-    ordering="NONE"
-
-    side="BOTH"
-    
 [[dependencies.xsurvive]]
+modId="forge"
+mandatory=true
+versionRange="[39,)"
+ordering="NONE"
+side="BOTH"
 
-    modId="minecraft"
-    
-    mandatory=true
-    
-    versionRange="[1.18.1,1.19)"
-    
-    ordering="NONE"
-    
-    side="BOTH"
+[[dependencies.xsurvive]]
+modId="minecraft"
+mandatory=true
+versionRange="[1.18.1,1.19)"
+ordering="NONE"
+side="BOTH"
+
+[[dependencies.xsurvive]]
+modId="xbackpack"
+mandatory=true
+versionRange="[1.18.1-1.1,)"
+ordering="BEFORE"
+
+[[dependencies.xsurvive]]
+modId="xores"
+mandatory=true
+versionRange="[1.18.1-1.0,)"
+ordering="BEFORE"
