--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId="xsurvive"
 version="1.18.1-1.0"
 displayName="XSurvive"
 credits="Thanks for downloading my Mod"
-authors="Luis" #optional
+authors="Luis"
 #displayURL="https://github.com/Luis-st/Forge-XSurvive/issues"
 description='''
 
@@ -32,11 +32,11 @@ side="BOTH"
 [[dependencies.xsurvive]]
 modId="xbackpack"
 mandatory=true
-versionRange="[1.18.1-1.1,)"
+versionRange="[1.18.1-1.3,)"
 ordering="BEFORE"
 
 [[dependencies.xsurvive]]
 modId="xores"
 mandatory=true
-versionRange="[1.18.1-1.0,)"
+versionRange="[1.18.1-1.2,)"
 ordering="BEFORE"
