--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ minecraft {
 			
 			property 'forge.logging.markers', 'REGISTRIES'
 			property 'forge.logging.console.level', 'debug'
+			property 'forge.enabledGameTestNamespaces', 'xsurvive'
 			property 'mixin.env.remapRefMap', 'true'
 			property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 			
@@ -50,6 +51,23 @@ minecraft {
 			
 			property 'forge.logging.markers', 'REGISTRIES'
 			property 'forge.logging.console.level', 'debug'
+			property 'forge.enabledGameTestNamespaces', 'xsurvive'
+			property 'mixin.env.remapRefMap', 'true'
+			property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
+			
+			mods {
+				examplemod {
+					source sourceSets.main
+				}
+			}
+		}
+		
+		gameTestServer {
+			workingDirectory project.file('run')
+			
+			property 'forge.logging.markers', 'REGISTRIES'
+			property 'forge.logging.console.level', 'debug'
+			property 'forge.enabledGameTestNamespaces', 'xsurvive'
 			property 'mixin.env.remapRefMap', 'true'
 			property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 			
@@ -65,6 +83,7 @@ minecraft {
 			
 			property 'forge.logging.markers', 'REGISTRIES'
 			property 'forge.logging.console.level', 'debug'
+			property 'forge.enabledGameTestNamespaces', 'xsurvive'
 			property 'mixin.env.remapRefMap', 'true'
 			property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 			
@@ -96,7 +115,7 @@ dependencies {
 	
 	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 	
-	implementation fg.deobf('net.luis.xbackpack:Forge-XBackpack:1.18.2-1.4')
+	implementation fg.deobf('net.luis.xbackpack:Forge-XBackpack:1.18.2-1.5')
 	implementation fg.deobf('net.luis.xores:Forge-XOres:1.18.2-1.3')
 }
 
