--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.18.2-1.0'
+version = '1.19-1.0'
 group = 'net.luis.xsurvive'
 archivesBaseName = 'XSurvive'
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -25,7 +25,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-	mappings channel: 'official', version: '1.18.2'
+	mappings channel: 'official', version: '1.19'
 	
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 	
@@ -111,19 +111,19 @@ repositories {
 }
 
 dependencies {
-	minecraft 'net.minecraftforge:forge:1.18.2-40.0.15'
+	minecraft 'net.minecraftforge:forge:1.19-41.0.45'
 	
 	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 	
-	implementation fg.deobf('net.luis.xbackpack:Forge-XBackpack:1.18.2-1.5')
-	implementation fg.deobf('net.luis.xores:Forge-XOres:1.18.2-1.3')
+	implementation fg.deobf('net.luis.xbackpack:Forge-XBackpack:1.19-1.5')
+	implementation fg.deobf('net.luis.xores:Forge-XOres:1.19-1.3')
 }
 
 jar {
 	manifest {
 		attributes([
 			"Specification-Title"     : "XSurvive",
-			"Specification-Version"   : "1.18.2-1.0",
+			"Specification-Version"   : "1.19-1.0",
 			"Implementation-Title"    : project.name,
 			"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
 		])
@@ -152,4 +152,8 @@ publishing {
 			url "file://${project.projectDir}/maven"
 		}
 	}
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = "UTF-8"
 }
