gamma 1.19 re-fix

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public-f net.minecraft.world.entity.projectile.ThrownTrident f_37555_ # tridentItem
 public net.minecraft.world.effect.MobEffect <init>(Lnet/minecraft/world/effect/MobEffectCategory;I)V # <init>
+public-f net.minecraft.client.Options f_92071_ # gamma
+public net.minecraft.client.OptionInstance$SliderableValueSet # SliderableValueSet
