--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,4 @@ public-f net.minecraft.world.entity.projectile.ThrownTrident f_37555_ # tridentI
 public net.minecraft.world.effect.MobEffect <init>(Lnet/minecraft/world/effect/MobEffectCategory;I)V # <init>
 public-f net.minecraft.client.Options f_92071_ # gamma
 public net.minecraft.client.OptionInstance$SliderableValueSet # SliderableValueSet
+public net.minecraft.world.level.dimension.end.EndDragonFight f_64060_ # dragonEvent
