--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.world.effect.MobEffect <init>(Lnet/minecraft/world/effect/M
 public-f net.minecraft.client.Options f_92071_ # gamma
 public net.minecraft.client.OptionInstance$SliderableValueSet # SliderableValueSet
 public net.minecraft.world.level.dimension.end.EndDragonFight f_64060_ # dragonEvent
+public net.minecraft.world.item.crafting.SimpleCookingSerializer$CookieBaker
