--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,6 +10,7 @@ credits="Thanks for downloading my Mod"
 authors="Luis"
 #displayURL="https://github.com/Luis-st/Forge-XSurvive/issues"
 description='''
+XSurvive is a life balancing mod
 
 Have a lot of fun when playing
 XSurvive Development Team
